[package]
name = "ras"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "^1.12", features = ["full"] }
tokio-stream = { version = "^0.1", features = ["io-util", "net"]}
futures = { version = "^0.3" }
maplit = { version = "^1.0" }
pretty_env_logger = { version = "^0.4" }
bitflags = { version = "^1.3" }
log = { version = "^0.4" }
multicast-socket = { version = "^0.2" }
hostname = { version = "^0.3" }
cidr-utils = { version = "^0.5" }
rtp-rs = { version = "^0.6" }
alac = { version = "^0.5", default-features = false, git = "https://github.com/dlunch/alac.rs" }
cfg-if = { version = "^1.0" }
mac_address = { version = "^1.1" }
clap = { version = "^2.33" }
rodio = { version = "^0.14", default-features = false }
anyhow = { version = "^1.0" }
sdp = { version = "^0.2" }
base64 = { version = "^0.13" }
rsa = { version = "^0.5" }
sha-1 = { version = "^0.9" }
aes = { version = "^0.7" }
block-modes = { version = "^0.8" }

[target.'cfg(windows)'.dependencies]
ipconfig = { version = "^0.2" }

[target.'cfg(unix)'.dependencies]
get_if_addrs = { version = "^0.5" }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
libpulse-binding = { version = "^2.0" }
libpulse-simple-binding = { version = "^2.0" }