[package]
name = "ras"
version = "0.1.0"
authors = ["Inseok Lee <dlunch@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "^1.19", features = ["full"] }
tokio-stream = { version = "^0.1", features = ["io-util", "net"]}
tokio-util = { version = "^0.7", features = ["codec", "net"] }
bytes = { version = "^1.2" }
futures = { version = "^0.3" }
maplit = { version = "^1.0" }
pretty_env_logger = { version = "^0.4" }
log = { version = "^0.4" }
rtp-rs = { version = "^0.6" }
symphonia = { version = "^0.5", default-features = false, features = ["alac"] }
cfg-if = { version = "^1.0" }
mac_address = { version = "^1.1" }
clap = { version = "^4.0", features = ["derive"] }
rodio = { version = "^0.17", default-features = false }
anyhow = { version = "^1.0" }
sdp = { version = "^0.5.1" }
base64 = { version = "^0.13" }
rsa = { version = "^0.7" }
sha-1 = { version = "^0.10" }
aes = { version = "^0.8" }
cbc = { version = "^0.1" }
lazy_static = { version = "^1.4" }
simple_mdns = { version = "^0.1", git = "https://github.com/dlunch/mdns" }
